--- a/css/style.css
+++ b/css/style.css
@@ -281,10 +281,11 @@ position: fixed;
 	opacity:0;
 }
 
-.profiledescription span {
+.profiledescription h1 {
   background-color: #fcd000;
   color:white;
-  padding:10px;
+  padding:20px;
+	width:40%;
 }
 
 .profiledescription h1, .smedia h1 {
